tests/ui/diagnostic_namespace/on_unimplemented/error_is_shown_in_downstream_crates.stderr
error[E0277]: Message
  --> $DIR/error_is_shown_in_downstream_crates.rs:11:14
   |
LL |     take_foo(());
   |     -------- ^^ label
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Foo` is not implemented for `()`
   = note: Note
note: required by a bound in `take_foo`
  --> $DIR/error_is_shown_in_downstream_crates.rs:8:21
   |
LL | fn take_foo(_: impl Foo) {}
   |                     ^^^ required by this bound in `take_foo`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
