tests/ui/diagnostic_namespace/on_unimplemented/error_is_shown_in_downstream_crates.rs
//@ aux-build:other.rs
//@ reference: attributes.diagnostic.on_unimplemented.intro

extern crate other;

use other::Foo;

fn take_foo(_: impl Foo) {}

fn main() {
    take_foo(());
    //~^ERROR Message
}
